@@ -161,6 +161,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Alt-D</b>: Disconnect from MPD<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Alt-Down</b>: Expand player<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Alt-Up</b>: Collapse player<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-H</b>: Search library<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-Q</b>: Quit<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-T</b>: Edit selected song's tags<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-U</b>: Update entire library<br/>
